fix: improve input placeholders and load previous settings in options

--- a/options.html
+++ b/options.html
@@ -78,18 +78,22 @@
 
         <label>搶票日期:
             <input type="text" id="date" placeholder="例如：07/12">
+            <small>格式：06/01</small>
         </label>
 
         <label>票價關鍵字:
             <input type="text" id="price" placeholder="例如：3000">
+            <small>格式：2880</small>
         </label>
 
         <label>票種關鍵字（如：VIP）:
             <input type="text" id="name" placeholder="例如：VIP">
+            <small>格式：VIP、紅2C</small>
         </label>
 
         <label>張數:
             <input type="number" id="count" min="1" placeholder="例如：2">
+            <small>格式：4</small>
         </label>
 
         <button id="save">💾 儲存</button>
