feat: add auto-reload option for ticket search and update settings handling

--- a/options.html
+++ b/options.html
@@ -96,6 +96,12 @@
             <small>格式：4</small>
         </label>
 
+        <label>
+            <input type="checkbox" id="autoReload">
+            沒有符合票種時自動重新整理
+        </label><br><br>
+
+
         <button id="save">💾 儲存</button>
     </div>
 
