--- a/options.html
+++ b/options.html
@@ -81,12 +81,12 @@
             <small>格式：06/01</small>
         </label>
 
-        <label>票價關鍵字:
+        <label>票價關鍵字（可多個，用空格分隔）:
             <input type="text" id="price" placeholder="例如：3000">
             <small>格式：2880</small>
         </label>
 
-        <label>票種關鍵字（如：VIP）:
+        <label>票種關鍵字（可多個，用空格分隔）:
             <input type="text" id="name" placeholder="例如：VIP">
             <small>格式：VIP、紅2C</small>
         </label>
