--- a/options.html
+++ b/options.html
@@ -10,7 +10,7 @@
             background-color: #f5f7fa;
             margin: 0;
             padding: 0;
-            width: 480px;
+            width: 400px;
         }
 
         .container {
@@ -20,6 +20,24 @@
             padding: 30px;
             border-radius: 12px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            padding-bottom: 80px;
+        }
+
+        #save {
+            position: fixed;
+            bottom: 10px;
+            /* Adjust space from bottom edge as needed */
+            left: 50%;
+            transform: translateX(-50%);
+            /* Center the button */
+            width: 360px;
+            /* Sets the content width to match container's content area (480px body - 2*30px container padding) */
+            /* The button's total width will be 420px + 2*12px padding = 444px */
+            z-index: 1000;
+            /* Ensures the button stays on top of other content */
+            margin-top: 0;
+            /* Overrides the margin-top from the general button style */
+            /* Visual styles like padding, background-color, color, etc., will be inherited from the 'button' rule */
         }
 
         h2 {
@@ -77,9 +95,22 @@
     <div class="container">
         <h2>KKTIX 搶票設定</h2>
 
+        <label>場次關鍵字（可空白，可多個，用空格分隔）:
+            <input type="text" id="session" placeholder="例如：高雄 下午場">
+            <small>格式：高雄、下午場</small>
+        </label>
+
         <label>搶票日期:
             <input type="text" id="date" placeholder="例如：07/12">
             <small>格式：06/01</small>
+        </label>
+
+        <label>日期搜尋順序:
+            <select id="dateOrder">
+                <option value="top-down">由上至下</option>
+                <option value="bottom-up">由下至上</option>
+                <option value="middle">從中間開始</option>
+            </select>
         </label>
 
         <label>票價關鍵字（可多個，用空格分隔）:
@@ -92,17 +123,17 @@
             <small>格式：VIP、紅2C</small>
         </label>
 
-        <label>張數:
-            <input type="number" id="count" min="1" placeholder="例如：2">
-            <small>格式：4</small>
-        </label>
-
-        <label>搜尋順序:
-            <select id="order">
+        <label>票價搜尋順序:
+            <select id="priceOrder">
                 <option value="top-down">由上至下</option>
                 <option value="bottom-up">由下至上</option>
                 <option value="middle">從中間開始</option>
             </select>
+        </label>
+
+        <label>張數:
+            <input type="number" id="count" min="1" placeholder="例如：2">
+            <small>格式：4</small>
         </label>
 
         <label>
